# ndt

./: my_loc.cpp  my_loc.hpp  ndt.h  ndt.hpp
localization/: my_loc.cpp  my_loc.hpp  package.xml
localization/src/: my_loc.cpp  my_loc_origin.cpp
localization/src/header/: ceres_ndt.hpp  ndt.h
mapping/: package.xml
src/localization/: CMakeLists.txt
src/localization/src/: ceres_ndt.cpp
src/localization/src/header/: my_loc.hpp  my_loc_hpp_txt
src/localization/src/test/: computeDerivatives.cpp  computeStep.cpp  computeTransform.cpp
src/mapping/: CMakeLists.txt
src/mapping/src/: mapping.cpp  test.cpp
