<?xml version="1.0"?>
<package format="2">
  <name>mapping</name>
  <version>0.0.1</version>
  <description>my_map node example</description>

  <!-- Maintainer and license -->
  <maintainer email="leehys4297@jnu.ac.kr">LHS</maintainer>
  <license>MIT</license>

  <!-- Build and runtime dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
